# case-study-and-project-chatbot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging_config.py  prompts.py
backend/app/models/: case_study.py  chat_request.py  chat_response.py  constants.py  intent_context.py  project.py  record.py  scored_record.py  vector_search_result.py  weighted_search_result.py
backend/app/repositories/: weaviate_case_study_repo.py  weaviate_manager.py  weaviate_project_repo.py
backend/app/repositories/interfaces/: case_study_repo.py  project_repo.py
backend/app/services/: llm_nlp_processor.py  openai_llm_service.py  query_preprocessor.py  rag_workflow.py  weighted_aggregator.py  workflow_manager.py
backend/app/services/interfaces/: llm_service.py  nlp_processor.py
backend/data/: case_studies.json  projects.json
backend/evaluation/: evaluation_llm.py  golden_dataset.py  run_evaluation.py  utils.py
backend/evaluation/metrics/: ambiguous_intent_clarification_metric.py  attribute_coverage_metric.py  clarification_metric.py  intent_accuracy_metric.py  latency_metric.py  no_results_clarification_metric.py  score_threshold_metric.py
backend/scripts/: generate_case_studies.py  generate_projects.py  load_data.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx
frontend/src/assistants/: assistant.ts
(+7 files in other folders)
